--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     docker-image:
         runs-on: ubuntu-latest
         steps:
+            - name: login in docker
+              run: docker login
             - name: Image from docker hub
               run: docker pull mtaori/myloginpage:v1
             - name: build image
