--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
             - name: login in docker
               run: docker login
             - name: Image from docker hub
-              run: docker pull mtaori/myloginpage:v1
+              run: docker pull mtaori/myloginform:v1
             - name: build image
-              run: docker build . -t mtaori/myloginpage:v1
+              run: docker build . -t mtaori/myloginform:v1
             - name: run image
-              run: docker run -itd -p 6010:80 mtaori/myloginimage:v1
+              run: docker run -itd -p 6010:80 mtaori/myloginform:v1
             
